### [BUGFIX] 1.0.2 changed portait, adjustments of sections on mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -36,7 +36,7 @@
 }
 
 .info-wrapper {
-    width: 55%;
+    width: 75%;
     display: flex;
     flex-direction: column;
     gap: 8vh;
