--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -186,7 +186,7 @@ form {
     .contact h1 {
         font-size: 1.5rem;
         text-align: center;
-        padding: 0 1rem;
+        padding: 1rem 1rem;
     }
 
     .return-button {
