--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -68,8 +68,8 @@ h1 {
     opacity: 0.85;
     border-radius: 5%;
     object-fit: contain;
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
 }
 
 @keyframes wordSlider {
@@ -191,8 +191,8 @@ h1 {
     }
 
     .portrait {
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
     }
 
     .img-wrapper {
@@ -235,16 +235,11 @@ h1 {
     }
 
     .portrait {
-        width: 180px;
-        height: 180px;
+        width: 400px;
+        height: 400px;
     }
 
     .hero-icon {
-        width: 1.2rem;
-        height: 1.2rem;
-    }
-
-    .img-wrapper {
         width: 1.2rem;
         height: 1.2rem;
     }
