--- a/src/styles/particleScene.css
+++ b/src/styles/particleScene.css
@@ -20,15 +20,15 @@
 }
 
 .rocket-hint-mobile {
+    width: 15vw;
     text-align: center;
     position: absolute;
-    bottom: 5vh;
-    left: 50vw;
+    bottom: 20vh;
+    right: 1rem;
     background: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 10px;
     border-radius: 5px;
-    transform: translate(-50%);
 }
 
 canvas {
